WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
278545
[WebGPU] GPUCanvasContext.surfaceBufferToImageBuffer doesn't handle failure when work is not submitted correctly
https://bugs.webkit.org/show_bug.cgi?id=278545
Summary
[WebGPU] GPUCanvasContext.surfaceBufferToImageBuffer doesn't handle failure w...
Mike Wyrzykowski
Reported
2024-08-22 16:00:25 PDT
[WebGPU] GPUCanvasContext.surfaceBufferToImageBuffer doesn't handle failure when work is not submitted correctly
Attachments
Add attachment
proposed patch, testcase, etc.
Mike Wyrzykowski
Comment 1
2024-08-22 16:16:38 PDT
rdar://133539413
Mike Wyrzykowski
Comment 2
2024-08-22 16:26:35 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/32614
EWS
Comment 3
2024-08-23 16:58:56 PDT
Committed
282683@main
(df309938f979): <
https://commits.webkit.org/282683@main
> Reviewed commits have been landed. Closing PR #32614 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug