Source/WebCore/Modules/WebGPU/Implementation/WebGPUPresentationContextImpl.h
@@ -55,7 +55,7 @@ public:
     void present(bool = false);
 
     WGPUSurface backing() const { return m_backing.get(); }
-    RefPtr<WebCore::NativeImage> getMetalTextureAsNativeImage(uint32_t bufferIndex) final;
+    RefPtr<WebCore::NativeImage> getMetalTextureAsNativeImage(uint32_t bufferIndex, bool& isIOSurfaceSupportedFormat) final;
 
 private:
     friend class DowncastConvertToBackingContext;
